syntax = "proto3";

package pb;

option go_package = "github.com/rs401/letsgorip/pb";

message Place {
    uint64 id = 1;
    uint64 user_id = 2;
    string name = 3;
    string description = 4;
    double latitude = 5;
    double longitude = 6;
    int64 created_at = 7;
    int64 updated_at = 8;
}

message PlaceIdRequest {
    uint64 id = 1;
}

message PlaceIdResponse {
    uint64 id = 1;
}

message GetPlacesRequest {}

service PlaceService {
    rpc CreatePlace(Place) returns (PlaceIdResponse);
    rpc GetPlace(PlaceIdRequest) returns (Place);
    rpc GetPlaces(GetPlacesRequest) returns (stream Place);
    rpc UpdatePlace(Place) returns (Place);
    rpc DeletePlace(PlaceIdRequest) returns (PlaceIdResponse);
}